# leibniz

./: .env.codex  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  codecov.yml  docker-compose.yml  manifest.scm  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  setup-local.sh  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: python.yml
docs/: SECURITY.md
docs/design/: README.md  architecture.md  implementation.md  quick-start.md  requirements.md  setup.md  testing.md
leibniz/: __init__.py
leibniz/cli/: __init__.py
leibniz/config/: __init__.py
leibniz/services/mocks/: __init__.py  factory.py  fixtures.py  grobid_mock.py  meilisearch_mock.py  neo4j_mock.py  openai_mock.py  qdrant_mock.py  redis_mock.py
scripts/: check-services.sh  ci-local.sh  install-git-hooks.sh  verify-docker.sh
tests/: conftest.py  test_factory.py  test_mocks.py
